--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "devDependencies": {
     "tap-spec": "^5.0.0",
     "tape": "^4.9.2"
+  },
+  "dependencies": {
+    "xmlhttprequest": "^1.8.0"
   }
 }
